--- a/src/kordle_helper/lnbMenu/LnbMenu.css
+++ b/src/kordle_helper/lnbMenu/LnbMenu.css
@@ -6,11 +6,11 @@
     }
   } */
 /* lnb */
-#lnb {position: fixed;width: 10%; top:0px; left: 10px; font-size: 0.5em; white-space: nowrap; }
-#lnb h1 {margin: 0; height: 30px;text-align: center;color: #306aa3;border:1px solid #306aa3; border-radius: 5px; 
+#lnb {position: fixed;min-width: 100px; width: 13%; top:0px; left: 10px; font-size: 0.5em; white-space: nowrap; }
+#lnb h1 {width: 100%; margin: 0; height: 30px;text-align: center;color: #306aa3;border:1px solid #306aa3; border-radius: 5px; 
     font-size: 2em;line-height: 1.8;letter-spacing: -2px; background: #f4f6fc; display: inline-block;}
-#lnb > ul {margin: 0;padding:0px; border:1px solid #306aa3; border-radius: 5px; }
-#lnb > ul > li { border: 1px solid #dcdcdc; display: inline-block;}
+#lnb > ul {margin: 0;padding:0px; border:1px solid #306aa3; border-radius: 5px; list-style-type: none; }
+#lnb > ul > li { border: 1px solid #dcdcdc; }
 #lnb > ul > li > a {display: block;padding: 14px 35px 14px 15px; color: inherit; white-space: nowrap;font-size: 1.6em; font-weight:900; background:#dcdcdc  no-repeat 95% 15px; color: #4a4a4a;
 box-sizing: border-box; text-align: center;}
 #lnb > ul > li a:hover {color: #d91c1b; background-color: #f5f2ec;}
