--- a/src/kordle_helper/contents/KordleNoticePopup.css
+++ b/src/kordle_helper/contents/KordleNoticePopup.css
@@ -4,10 +4,8 @@
     opacity: 50%;
     position: absolute;
 
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
+    width: 100%;
+    height: 100%;
 }
 
 dialog.popup {
