--- a/src/kordle_helper/lnbMenu/LnbMenu.css
+++ b/src/kordle_helper/lnbMenu/LnbMenu.css
@@ -6,7 +6,7 @@
     }
   } */
 /* lnb */
-#lnb {position: fixed;min-width: 100px; width: 13%; top:0px; left: 10px; font-size: 0.5em; white-space: nowrap; }
+#lnb {position: fixed;min-width: 100px; width: 13%; top:0px; left: 10px; font-size: 0.5em; white-space: nowrap; z-index: 1001; }
 #lnb h1 {width: 100%; margin: 0; height: 30px;text-align: center;color: #306aa3;border:1px solid #306aa3; border-radius: 5px; 
     font-size: 2em;line-height: 1.8;letter-spacing: -2px; background: #f4f6fc; display: inline-block;}
 #lnb > ul {margin: 0;padding:0px; border:1px solid #306aa3; border-radius: 5px; list-style-type: none; }
