--- a/src/kordle_helper/contents/KordleNoticePopup.css
+++ b/src/kordle_helper/contents/KordleNoticePopup.css
@@ -2,8 +2,8 @@
     z-index: 999;
     background-color: grey;
     opacity: 50%;
-    position: absolute;
-
+    position: fixed;
+    top: 0px;
     width: 100%;
     height: 100%;
 }
