--- a/src/kordle_helper/contents/KordleContents/NotUseListContainer/NotUseListContainer.css
+++ b/src/kordle_helper/contents/KordleContents/NotUseListContainer/NotUseListContainer.css
@@ -11,6 +11,8 @@
 }
 
 .notUseListCase {
+    border-radius: 5px; 
+    border: 1px solid grey;
     
 }
 
@@ -20,7 +22,6 @@
     min-height: 20px;
     font-size: 15px;
     font-weight: 1000;
-    border: 0.1px solid black;
     text-align: center;
     vertical-align: middle;
 }
@@ -31,7 +32,7 @@
     font-size: 15px;
     font-weight: 1000;
     background-color: grey;
-    border: 0.1px solid black;
+    border: 1px solid grey;
     text-align: center;
     vertical-align: middle;
 
