--- a/src/kordle_helper/contents/KordleContents/KordleContents.css
+++ b/src/kordle_helper/contents/KordleContents/KordleContents.css
@@ -1,26 +1,17 @@
 .kordleContents {
-    /* width: 1000px; */
-    margin: 0px auto; 
     display: flex;
-
+    flex-flow: row nowrap;
+    width: 100%;
+    justify-content: center;
+    grid-gap: 50px;
+    margin: 0px auto; 
 }
+
 .leftContents {
-    
-    /* float: right; */
-    /* flex: 6; */
-    /* width: 60%; */
-    /* display: inline-block; */
-    margin-left: 50px;
-    float: left;
     box-sizing: border-box;
 
 }
 .rightContents {
-    float: left;
-    /* flex: 1; */
-    margin-left: 50px;
-    /* width: 20%; */
-    /* display: inline-block; */
     box-sizing: border-box;
     
 
@@ -28,8 +19,6 @@
 .section {
     margin: 40px 0px;
 }
-
-
 .kordle
 .word {
     width: 50px;
